# ChangeLog file for sql/src/backends/monet5
# This file is updated with mchangelog (Gentoo echangelog bastard script)

  24 Mar 2010; Fabian Groffen <fabian@cwi.nl> merovingian.c,
  merovingian_client.c:
  Implemented UNIX domain socket listener for Merovingian, found as
  mapi_socket in the dbfarm.  Client connections can be made over it
  like normal TCP connections.

  17 Mar 2010; Fabian Groffen <fabian@cwi.nl> merovingian_proxy.c:
  When a proxy connection is made to a local UNIX domain socket, pass
  on the filedescriptor instead of proxying.

  16 Mar 2010; Fabian Groffen <fabian@cwi.nl>
  merovingian_forkmserver.c, merovingian_proxy.c:
  Use mserver5's UNIX domain socket support when Merovingian is supposed
  to proxy the connection to the database.

*June2010

  16 Mar 2010; Fabian Groffen <fabian@cwi.nl>
  merovingian_controlrunner.c:
  Enlarged buffer to avoid incomplete output being sent to monetdb(1),
  causing commands like status and get to fail on certain
  configurations.

  05 Mar 2010; Fabian Groffen <fabian@cwi.nl> merovingian_client.c:
  Avoid running over the allocated buffer space resulting in crashes
  when a client connects which IP address cannot be resolved into a
  hostname, bug #2964247

*Feb2010-SP1
*Feb2010
*Nov2009-SP2

  21 Jan 2010; Fabian Groffen <fabian@cwi.nl> monetdb.c:
  Changed wording of monetdb status -l for last crash to indicate the time
  reported is not the crash time, but the time the server was started which
  eventually crashed, bug #2900355

  13 Jan 2010; Fabian Groffen <fabian@cwi.nl> merovingian.c:
  Strip trailing newlines from the control channel password, bug #2931392

*Nov2009-SP1

  11 Dec 2009; Fabian Groffen <fabian@cwi.nl> merovingian_forkmserver.c,
  monetdb.1, properties.c:
  The master property of a database now contains an id that is used to
  identify the master to the slaves. The id can be given using monetdb set, or
  one is generated when no id is supplied (when just setting it to 'yes')
